Change publications; add research content; change phone number

--- a/_papers/2017-03-01-gd.md
+++ b/_papers/2017-03-01-gd.md
@@ -1,4 +1,5 @@
 ---
+state: hidden
 layout: paper
 title: Widespread changes in nucleosome accessibility without changes in nucleosome occupancy during a rapid transcriptional induction
 authors:  Mueller B*, <b>Mieczkowski J</b>*, Kundu S, Wang P, Sadreyev R, Tolstorukov MY, Kingston RE
