Change: paper ref., research layout, news box frame

--- a/_papers/2016-05-06-nc.md
+++ b/_papers/2016-05-06-nc.md
@@ -1,4 +1,5 @@
 ---
+state: hidden
 layout: paper
 title: MNase titration reveals differences between nucleosome occupancy and chromatin accessibility
 authors:  <b>Mieczkowski J</b>*, Cook A*, Bowman SK*, Mueller B, Alver BH, Kundu S, Deaton AM, Urban JA, Larschan E, Park PJ, Kingston RE, Tolstorukov MY
